FIX: Dropdown button was too wide in desktop layout

--- a/frontend-html/src/gui/connections/MobileComponents/Form/ComboBox/ComboBox.module.scss
+++ b/frontend-html/src/gui/connections/MobileComponents/Form/ComboBox/ComboBox.module.scss
@@ -49,3 +49,10 @@ div.mobileInput div.link {
     color: var(--background5);
   }
 }
+
+.button {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  min-width: 45px;
+}
